.vscode/allianceuat_compare/force-app/main/default/objects/Shift_Job_Role_Mapping__c/Shift_Job_Role_Mapping__c.object-meta.xml
<CustomObject>
    <description>Job Role Mapping for Shiftmatch/VMS</description>
    <label>Shift Job Role Mapping</label>
    <nameField>
        <displayFormat>SJRM-{0000000}</displayFormat>
        <label>Shift Job Role Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shift Job Role Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>