.vscode/allianceuat_compare/force-app/main/default/objects/Shift_Job_Role_Mapping__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shift Job Role Mappings</relationshipLabel>
    <relationshipName>Shift_Job_Role_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>