.vscode/allianceuat_compare/force-app/main/default/objects/Shift_Job_Role_Mapping__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Type</label>
    <referenceTo>sirenum__Job_Type__c</referenceTo>
    <relationshipLabel>Shift Job Role Mappings</relationshipLabel>
    <relationshipName>Shift_Job_Role_Mappings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>