.vscode/allianceuat_compare/force-app/main/default/objects/Shift_Job_Role_Mapping__c/fields/VMS_Job_Role__c.field-meta.xml
<CustomField>
    <fullName>VMS_Job_Role__c</fullName>
    <description>Job Role as defined in VMS</description>
    <label>VMS Job Role</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>