.vscode/allianceuat_compare/force-app/main/default/objects/Shift_Job_Role_Mapping__c/fields/VMS_Name__c.field-meta.xml
<CustomField>
    <fullName>VMS_Name__c</fullName>
    <label>VMS Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ShiftMatch</fullName>
            </value>
            <value>
                <fullName>StaffCentral</fullName>
            </value>
            <value>
                <fullName>Emprevo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>