.vscode/allianceuat_compare/force-app/main/default/objects/Shift_Job_Role_Mapping__c/fields/WFM_Contract__c.field-meta.xml
<CustomField>
    <fullName>WFM_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WFM Contract</label>
    <referenceTo>sirenum__ProActiveContract__c</referenceTo>
    <relationshipLabel>Shift Job Role Mappings</relationshipLabel>
    <relationshipName>Shift_Job_Role_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>