.vscode/allianceuat_compare/force-app/main/default/objects/Shift_Job_Role_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VMS_Name__c</columns>
    <columns>Account__c</columns>
    <columns>WFM_Contract__c</columns>
    <columns>VMS_Job_Role__c</columns>
    <columns>Job_Type__c</columns>
    <columns>Job_Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>